APIs/googleapis.com/displayvideo/v3/javascript-client/docs/SensitiveCategoryTargetingOptionDetails.md
# DisplayVideo360Api.SensitiveCategoryTargetingOptionDetails

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**sensitiveCategory** | **String** | Output only. An enum for the DV360 Sensitive category content classifier. | [optional] [readonly] 



## Enum: SensitiveCategoryEnum


* `UNSPECIFIED` (value: `"SENSITIVE_CATEGORY_UNSPECIFIED"`)

* `ADULT` (value: `"SENSITIVE_CATEGORY_ADULT"`)

* `DEROGATORY` (value: `"SENSITIVE_CATEGORY_DEROGATORY"`)

* `DOWNLOADS_SHARING` (value: `"SENSITIVE_CATEGORY_DOWNLOADS_SHARING"`)

* `WEAPONS` (value: `"SENSITIVE_CATEGORY_WEAPONS"`)

* `GAMBLING` (value: `"SENSITIVE_CATEGORY_GAMBLING"`)

* `VIOLENCE` (value: `"SENSITIVE_CATEGORY_VIOLENCE"`)

* `SUGGESTIVE` (value: `"SENSITIVE_CATEGORY_SUGGESTIVE"`)

* `PROFANITY` (value: `"SENSITIVE_CATEGORY_PROFANITY"`)

* `ALCOHOL` (value: `"SENSITIVE_CATEGORY_ALCOHOL"`)

* `DRUGS` (value: `"SENSITIVE_CATEGORY_DRUGS"`)

* `TOBACCO` (value: `"SENSITIVE_CATEGORY_TOBACCO"`)

* `POLITICS` (value: `"SENSITIVE_CATEGORY_POLITICS"`)

* `RELIGION` (value: `"SENSITIVE_CATEGORY_RELIGION"`)

* `TRAGEDY` (value: `"SENSITIVE_CATEGORY_TRAGEDY"`)

* `TRANSPORTATION_ACCIDENTS` (value: `"SENSITIVE_CATEGORY_TRANSPORTATION_ACCIDENTS"`)

* `SENSITIVE_SOCIAL_ISSUES` (value: `"SENSITIVE_CATEGORY_SENSITIVE_SOCIAL_ISSUES"`)

* `SHOCKING` (value: `"SENSITIVE_CATEGORY_SHOCKING"`)

* `EMBEDDED_VIDEO` (value: `"SENSITIVE_CATEGORY_EMBEDDED_VIDEO"`)

* `LIVE_STREAMING_VIDEO` (value: `"SENSITIVE_CATEGORY_LIVE_STREAMING_VIDEO"`)




